fix usage of newer java features on 1.16